# pixi-build

./: .gitignore  Cargo.toml  intra-doc-links.bash  pixi.toml  recipe.yaml
.github/workflows/: rattler-build.yml  rust-compile.yml
crates/pixi-build/: Cargo.toml
crates/pixi-build-python/: Cargo.toml
crates/pixi-build-python/src/: main.rs  protocol.rs  python.rs
crates/pixi-build/src/: cli.rs  consts.rs  dependencies.rs  lib.rs  manifest_ext.rs  server.rs
crates/pixi-build/src/utils/: mod.rs
schema/: model.py  schema.json
