[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
clap = "4.5.11"
pixi_manifest = { git = "https://github.com/prefix-dev/pixi", branch = "main" }
pixi_consts = { git = "https://github.com/prefix-dev/pixi", branch = "main" }
rattler-build = { git = "https://github.com/prefix-dev/rattler-build", branch = "main", default-features = false }
rattler_conda_types = "0.26.3"
rattler_package_streaming = "0.21.7"
chrono = "0.4.38"
miette = "7.2.0"
reqwest = "0.12.5"
reqwest-middleware = "0.3.2"
tokio = "1.37.0"
tempfile = "3.10.1"
clap-verbosity-flag = "2.2.1"
tracing-subscriber = "0.3.18"
serde_yaml = "0.9.33"
