[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
clap = "4.5.11"

chrono = "0.4.38"
miette = "7.2.0"
reqwest = "0.12.5"
reqwest-middleware = "0.3.2"
tokio = "1.37.0"
tempfile = "3.10.1"
clap-verbosity-flag = "2.2.1"
tracing-subscriber = "0.3.18"
serde_yaml = "0.9.33"

parking_lot = "0.12.3"

jsonrpc-stdio-server = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-core = "18.0.0"

rattler-build = { git = "https://github.com/baszalmstra/rattler-build", branch = "chore/bump_rattler", default-features = false }
rattler_conda_types = "0.27.1"
rattler_package_streaming = "0.22.1"

pixi_build_types = { git = "https://github.com/tdejager/pixi", branch = "feat/pixi-build-frontend" }
pixi_consts = { git = "https://github.com/tdejager/pixi", branch = "feat/pixi-build-frontend" }
pixi_manifest = { git = "https://github.com/tdejager/pixi", branch = "feat/pixi-build-frontend" }
pixi_spec = { git = "https://github.com/tdejager/pixi", branch = "feat/pixi-build-frontend" }
