[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.82"
clap = "4.5.20"
itertools = "0.13.0"

chrono = "0.4.38"
miette = "7.2.0"
reqwest = "0.12.5"
reqwest-middleware = "0.3.2"
tokio = "1.37.0"
tempfile = "3.10.1"
clap-verbosity-flag = "2.2.1"
tracing-subscriber = "0.3.18"
serde_yaml = "0.9.33"
serde = "1.0"
minijinja = "2.3.0"

parking_lot = "0.12.3"

jsonrpc-stdio-server = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-core = "18.0.0"

rattler-build = { git = "https://github.com/prefix-dev/rattler-build", branch = "main", default-features = false }
rattler_conda_types = "0.28.2"
rattler_package_streaming = "0.22.10"
rattler_virtual_packages = "1.1.7"

#pixi_build_types = { path = "../pixi-build-branch/crates/pixi_build_types" }
#pixi_consts = { path = "../pixi-build-branch/crates/pixi_consts" }
#pixi_manifest = { path = "../pixi-build-branch/crates/pixi_manifest" }
#pixi_spec = { path = "../pixi-build-branch/crates/pixi_spec" }

pixi_build_types = { git = "https://github.com/prefix-dev/pixi", branch = "feature/pixi-build" }
pixi_consts = { git = "https://github.com/prefix-dev/pixi", branch = "feature/pixi-build" }
pixi_manifest = { git = "https://github.com/prefix-dev/pixi", branch = "feature/pixi-build" }
pixi_spec = { git = "https://github.com/prefix-dev/pixi", branch = "feature/pixi-build" }

