[package]
name = "pixi-build-backend"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true }

pixi_build_types = { workspace = true }
pixi_consts = { workspace = true }
pixi_manifest = { workspace = true }
pixi_spec = { workspace = true }

rattler-build = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
rattler_conda_types = { workspace = true }
rattler_package_streaming = { workspace = true }
rattler_virtual_packages = { workspace = true }
chrono = { workspace = true }
miette = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tempfile = { workspace = true }
clap-verbosity-flag = { workspace = true }
tracing-subscriber = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
minijinja = { workspace = true }
itertools = { workspace = true }

parking_lot = { workspace = true }

jsonrpc-stdio-server = { workspace = true }
jsonrpc-http-server = { workspace = true }
jsonrpc-core = { workspace = true }
log = "0.4.22"
